--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "aws-iot-device-sdk-embedded-c"]
 	path = aws-iot-device-sdk-embedded-c
 	url = https://github.com/aws/aws-iot-device-sdk-embedded-C.git
+	branch = main
